<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".BuyMedicineActivity">

    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24x7_healthcare"
        android:textColor="@color/teal_200"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewODTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_location_kolhapur"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textView_Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewLTDTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_medicine1"
        android:textColor="@color/yellowLight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewODTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listViewDD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewLTDTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputLayout" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/buttonBMBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextMedicineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Medicine Name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextMedicinePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Medicine Price"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonAddMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Medicine" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonBMBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonLTDAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to Cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
